--- a/react-backend/frontend/src/components/NavBar.css
+++ b/react-backend/frontend/src/components/NavBar.css
@@ -16,7 +16,7 @@ nav li {
     text-align: left;
 }
 nav ul {
-    max-width: 854px;
+    max-width: 1316px;
     min-width: 440px;
     margin: auto;
     padding: 0;
