--- a/react-backend/frontend/src/components/Post.css
+++ b/react-backend/frontend/src/components/Post.css
@@ -1,6 +1,6 @@
 .grid-item {
   float: left;
-  width: 240px;
+  width: 320px;
   border:2px solid rgb(213, 230, 228);
   list-style: none;
   margin-bottom: 10px;
